--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div id="about">
         <div class="row">
             <div class="about-col-1">
-                <img class="aboutimg" src="img/about.PNG" alt="">
+                <img class="aboutimg" src="img/about.png" alt="">
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
