--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div id="about">
         <div class="row">
             <div class="about-col-1">
-                <img class="aboutimg" src="img/about.png" alt="">
+                <img class="aboutimg" src="/img/about.png" alt="">
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
@@ -120,7 +120,7 @@
             <div class="worklist">
                 <div class="work">
                     <a href="https://github.com/BuddyReed/Blog_Project">
-                        <img src="/img/TheSpotBan.gif" alt="">
+                        <img src="/img/THeSpotBan.gif" alt="">
                     </a>
                 </div>
                 <div class="work">
