--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
-                <p class="aboutpar">Hi my name is Buddy! I am a software developer with 10+ years of delivering expert
-                    customer service
-                    and sales. Passionate about technology and developing solutions that positively impact lives. Eager
+                <p class="aboutpar">Hi my name is Buddy! I am a software developer with a background in Real Estate and Music Production.
+                    I have 10 plus years as an expert in customer service and sales.
+                    Passionate about technology and developing solutions that positively impact lives. Eager
                     to leverage excellent communication, relationship management, diverse experience, and technical
                     skills to a software team.</p>
 
