--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buddy's Portfolio</title>
 
+        <!-- CSS Link  -->
+    <link rel="stylesheet" href="/style.css">
+    
     <!-- Swiper CSS  -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
 
     <!-- Box Icon  -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
-    <!-- CSS Link  -->
-    <link rel="stylesheet" href="style.css">
+
 
 
 </head>
